# rainwater-calculator-py

./: .gitignore  AGENTS.md  Katy Texas Precip Data.csv  LICENSE  README.md  RainwaterCalculator.spec  THIRD_PARTY_NOTICES.md  build_exe.ps1  build_installer.ps1  detroitprecip data.csv  main.py  mkdocs.yml  prepare_weasyprint.ps1  pyproject.toml  run_app.bat  run_standalone_app.bat  run_streamlit_viewer.bat  start.bat  streamlit_app.py  tkinter_app.py
.streamlit/: config.toml
docs/: analysis.md  collection-surfaces.md  daily-analysis-method.md  equipment-catalog-roadmap.md  execution-log.md  financial-analysis.md  getting-started.md  index.md  optimization.md  project-storage.md  projects.md  rainfall-data.md  reports.md  roadmap.md  shortcuts.md  troubleshooting.md  water-demand.md
installer/: RainwaterCalculator.iss
rainwater_app/: __init__.py  acis.py  analysis_service.py  analysis_state.py  app_paths.py  aviation.py  candidate_service.py  chart_data.py  climate_normals.py  defaults.py  eccc.py  engine.py  equipment_catalog.py  example_projects.py  execution_log.py  financial.py  financial_service.py  first_flush.py  geocoding.py  html_pdf_rendering.py  map_tiles.py  models.py  number_formatting.py  optimization.py  pdf_rendering.py  project_comparison.py  project_state.py  rainfall.py  rainfall_quality.py  recommendations.py  report_rendering.py  report_service.py  reporting.py  stations.py  storage.py  system_model.py  ui_logic.py  units.py
requirements/: README.md  desktop-build.txt  viewer.txt
scripts/: build_climate_normals_catalog.py
templates/: CollAreaDet.html  DemandDet.html  IndoorDemand.html  NonRoofCollectionArea.html  OutdoorDemand.html  Report.html  RoofCollectionArea.html  _render_field.html  _render_field_disabled.html  fileupload.html  index.html  login.html  register.html  relgraph.html  result.html  unitchoice.html  user_index.html  water_in_tank.html
tests/: test_acis.py  test_airport_station_ui.py  test_analysis_service.py  test_analysis_state.py  test_app_paths.py  test_aviation.py  test_candidate_service.py  test_chart_data.py  test_climate_normals.py  test_distribution.py  test_eccc.py  test_engine.py  test_equipment_catalog.py  test_example_projects.py  test_execution_log.py  test_financial.py  test_financial_service.py  test_first_flush.py  test_fixture_demand.py  test_geocoding.py  test_interface_policy.py  test_map_tiles.py  test_number_formatting.py  test_optimization.py  test_project_comparison.py  test_project_lifecycle.py  test_project_state.py  test_rainfall.py  test_rainfall_quality.py  test_recommendations.py  (+8 more)
(+79 files in other folders)
