[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rainwater-calculator-standalone"
version = "0.1.0"
description = "Standalone local rainwater harvesting calculator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.26",
  "streamlit>=1.35",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rainwater_app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
