[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rainwater-calculator-standalone"
version = "0.1.2"
description = "Standalone local rainwater harvesting calculator"
readme = "README.md"
license = { text = "0BSD" }
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.26",
  "pypdf>=5.0",
  "pycountry>=24.6",
  "requests>=2.31",
  "resvg_py==0.3.3",
  "tkintermapview>=1.29,<2",
  "weasyprint>=69,<70",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=6.0",
  "ruff>=0.9",
]
desktop-build = [
  "pyinstaller>=6.0",
]
docs = [
  "mkdocs-material>=9.5",
]
viewer = [
  "streamlit>=1.35",
]
security = [
  "cyclonedx-bom==7.3.0",
  "pip-audit==2.10.1",
]
lock-bootstrap = [
  "setuptools==83.0.0",
  "wheel==0.47.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rainwater_app*"]

[tool.setuptools.package-data]
rainwater_app = ["data/*.json.gz"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
skip_covered = true

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
  "build",
  "dist",
  "site",
  "Weather Station Data Folder",
]

[tool.ruff.lint]
select = ["E4", "E9", "F"]
